# ms-teams-mcp

./: pyproject.toml
ms_teams_mcp/: server.py
