[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms-teams-mcp"
version = "0.1.8"
description = "Microsoft Teams & Outlook MCP Server"
requires-python = ">=3.10"
dependencies = [
    "msal",
    "requests",
    "fastmcp",
    "openpyxl",
    "pyhwp",
    "six",
]

[project.scripts]
ms-teams-mcp = "ms_teams_mcp.server:main"

[tool.setuptools.packages.find]
include = ["ms_teams_mcp*"]
